- 5.0 LGPL Showcase on mobile/iOS   - home tab interface     - tiled area border:       - remove entirely for mobile       - desktop browsers: eliminate showEdges on TileGrid and use a similar CSS border instead - Partially reverted r2765 - "thumbnail" is the correct cellStyle

--- a/samples/showcase/war/Showcase.css
+++ b/samples/showcase/war/Showcase.css
@@ -21,6 +21,14 @@
     color:#363B30;
 }
 
+.showcaseTileGrid {
+    border: 6px solid transparent;
+    -moz-border-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAAAAAA6mKC9AAAAAnRSTlMAAHaTzTgAAAA6SURBVHgBY9iOBhi2v0YBIIGHSACXwOOXINUvH8MFXp4HGXf+JVQATAEBkEWBAMJQTGsJuxSb59AAAOBGySGOFM5JAAAAAElFTkSuQmCC) 6 repeat;
+    -o-border-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAAAAAA6mKC9AAAAAnRSTlMAAHaTzTgAAAA6SURBVHgBY9iOBhi2v0YBIIGHSACXwOOXINUvH8MFXp4HGXf+JVQATAEBkEWBAMJQTGsJuxSb59AAAOBGySGOFM5JAAAAAElFTkSuQmCC) 6 repeat;
+    -webkit-border-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAAAAAA6mKC9AAAAAnRSTlMAAHaTzTgAAAA6SURBVHgBY9iOBhi2v0YBIIGHSACXwOOXINUvH8MFXp4HGXf+JVQATAEBkEWBAMJQTGsJuxSb59AAAOBGySGOFM5JAAAAAElFTkSuQmCC) 6 repeat;
+    border-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAAAAAA6mKC9AAAAAnRSTlMAAHaTzTgAAAA6SURBVHgBY9iOBhi2v0YBIIGHSACXwOOXINUvH8MFXp4HGXf+JVQATAEBkEWBAMJQTGsJuxSb59AAAOBGySGOFM5JAAAAAElFTkSuQmCC) 6 repeat;
+}
+
 /* Buttons*/
 .cssButton {
     padding:2px;
